tweak: try to fix last line of headline not being displayed on iphone 11

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,6 @@
      object-fit: cover;
 }
 .news-dashboard-container .news-grid .news-card .news-card-headline-portion {
-  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -167,6 +166,9 @@
   .news-dashboard-container .news-grid .news-card:first-child .news-card-image-portion {
     width: 50%;
     height: auto;
+  }
+  .news-dashboard-container .news-grid .news-card:first-child .news-card-headline-portion {
+    width: 50%;
   }
 }
 @media (min-width: 1200px) {
