--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -54,7 +54,6 @@
             }
 
             .news-card-headline-portion {
-                flex: 1;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -89,6 +88,10 @@
                 .news-card-image-portion {
                     width: 50%;
                     height: auto;
+                }
+
+                .news-card-headline-portion {
+                    width: 50%;
                 }
             }
         }
